# viso_jax

./: .gitignore  LICENSE  README.md  pyproject.toml
bash_scripts/: run_all_de_moor_perishable.sh  run_all_hendrix_perishable_one_product.sh  run_all_hendrix_perishable_substitution_two_product.sh  run_all_hendrix_perishable_substitution_two_product_ortega.sh  run_all_mirjalili_perishable_platelet.sh  run_all_scenario_a.sh  run_all_scenario_b_hendrix_settings.sh  run_all_scenario_b_ortega_settings.sh  run_all_scenario_c.sh
notebooks/: reproduce_viso_jax_experiments.ipynb
tests/: test_DeMoorPerishableAsyncVIR.py  test_DeMoorPerishableGymnax.py  test_DeMoorPerishableVIR.py  test_HendrixPerishableOneProductGymnax.py  test_HendrixPerishableOneProductVIR.py  test_HendrixPerishableSubstitutionTwoProductGymnax.py  test_HendrixPerishableSubstitutionTwoProductVIR.py  test_JaxAcceleration.py  test_MirjaliliPerishablePlateletVIR.py  utils.py
tests/data/: de_moor_perishable_m2_exp1_reported_policy.csv  de_moor_perishable_m2_exp2_reported_policy.csv  mirjalili_perishable_platelet_m3_fig6_1_left.csv  mirjalili_perishable_platelet_m3_fig6_1_middle.csv  mirjalili_perishable_platelet_m3_fig6_1_right.csv
viso_jax/: __init__.py  registration.py
viso_jax/environments/: __init__.py
viso_jax/evaluation/: evaluate_policy.py
viso_jax/policies/: heuristic_policy.py  value_iteration_policy.py
viso_jax/policies/heuristic_policies/: __init__.py  s_policy.py  sq_policy.py  ss_policy.py  ssaq_policy.py  ssbq_policy.py  waste_conscious_s_policy.py
viso_jax/scenarios/de_moor_perishable/: environment.py  vi_runner.py
viso_jax/scenarios/de_moor_perishable/conf/rollout_wrapper/: de_moor_perishable.yaml
viso_jax/scenarios/de_moor_perishable/conf/scenario_settings/: de_moor_perishable_base_settings.yaml
viso_jax/scenarios/de_moor_perishable/conf/vi_runner/: de_moor_perishable.yaml  de_moor_perishable_async.yaml
viso_jax/scenarios/hendrix_perishable_one_product/: environment.py  vi_runner.py
viso_jax/scenarios/hendrix_perishable_one_product/conf/rollout_wrapper/: hendrix_perishable_one_product.yaml
viso_jax/scenarios/hendrix_perishable_one_product/conf/scenario_settings/: hendrix_perishable_one_product_base_settings.yaml
viso_jax/scenarios/hendrix_perishable_one_product/conf/vi_runner/: hendrix_perishable_one_product.yaml
viso_jax/scenarios/hendrix_perishable_substitution_two_product/: environment.py  vi_runner.py
viso_jax/scenarios/hendrix_perishable_substitution_two_product/conf/rollout_wrapper/: hendrix_perishable_substitution_two_product.yaml
viso_jax/scenarios/hendrix_perishable_substitution_two_product/conf/scenario_settings/: hendrix_perishable_substitution_two_product_base_settings.yaml
viso_jax/scenarios/hendrix_perishable_substitution_two_product/conf/vi_runner/: hendrix_perishable_substitution_two_product.yaml
viso_jax/scenarios/mirjalili_perishable_platelet/: environment.py  vi_runner.py
viso_jax/scenarios/mirjalili_perishable_platelet/conf/rollout_wrapper/: mirjalili_perishable_platelet.yaml
viso_jax/scenarios/rajendran_perishable_platelet/: environment.py  vi_runner.py
viso_jax/simopt/: run_optuna_simopt.py
viso_jax/simopt/conf/: config.yaml
viso_jax/simopt/conf/policy/: S_policy.yaml  sQ_policy.yaml  sS_policy.yaml  sSaQ_policy.yaml  sSbQ_policy.yaml  waste_conscious_S_policy.yaml
viso_jax/utils/: kpis.py  ordering.py  rollout.py  yaml.py
viso_jax/value_iteration/: async_vi_runner.py  base_vi_runner.py  run_value_iteration.py
viso_jax/value_iteration/conf/: config.yaml
viso_jax/value_iteration/conf/policy/: value_iteration_policy.yaml
(+215 files in other folders)
