[project]
name = "viso-jax"
version = "0.1.0"
description = "GPU-accelerated value iteration and simulation for perishable inventory control using JAX"
authors = [{name = "Joe Farrington", email = "farrington.joe@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jax[cuda12]>=0.4.30",
    "hydra-core>=1.3.2",
    "numpyro>=0.15.3",
    "gymnax>=0.0.6",
    "optuna==3.1.0",
    "flax>=0.8.5",
    "numpy<2.0",
    "pandas>=2.2.3",
    "scipy>=1.13.1",
    "matplotlib>=3.9.2",
    "tensorflow-probability>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "black>=24.8.0",
    "pytest>=8.3.3",
    "pytest-datadir>=1.5.0",
]